--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -64,7 +64,9 @@
 @define-color selected_row_bg_color_b shade (@theme_selected_bg_color, 1.22);
 
 @define-color menu_fg_color #2e87e3;
-@define-color menu_items_color #555753;
+@define-color menu_bg_color #729fcf;
+@define-color menu_controls_color #555753;
+
 @define-color highlighted_border #8a8f8a;
 @define-color internal_element_color #888a85;
 
@@ -104,8 +106,6 @@
     -GtkScrolledWindow-scrollbar-spacing: 0;
     -GtkScrolledWindow-scrollbars-within-bevel: 1;
 
-
-    -GtkMenuBar-internal-padding: 0;
     -GtkTreeView-expander-size: 10;
     -GtkToolItemGroup-expander-size: 12;
     -GtkExpander-expander-size: 12;
@@ -132,6 +132,7 @@
     -GtkEntry-progress-border: 0;
 
     -GtkSeparatorToolItem-shadow-type: none;
+    -GtkSeparator-shadow-type: none;
 
     /* Style */
     background-color: @theme_bg_color;
@@ -376,57 +377,80 @@ GtkScrollbar.button:insensitive {
  * Menus *
  *********/
 
+/* this controls the general appearance of the menubar */
 .menubar {
     background-image: -gtk-gradient (linear,
 				     left top, left bottom,
 				     from (@theme_bg_color),
 				     color-stop (0.45, shade (@theme_bg_color, 0.97)),
 				     to (shade (@theme_bg_color, 0,99));
+    border-width: 0;
     border-style: none;
     padding: 4;
-    border-width: 0;
 
     -GtkWidget-window-dragging: true;
+    -GtkMenuBar-internal-padding: 0;
+}
+
+/* remove the image from the prelight areas */
+.menubar .menuitem:prelight {
+    background-image: none;
+    background-color: @theme_base_color;
+    color: @theme_text_color;
+
+    border-style: solid;
+    border-radius: 3;
+    border-width: 1;
+    border-color: @inactive_frame_color;
 }
 
 .menu {
-    padding: -1;
-    background-color: shade (@theme_bg_color, 1.12);
-    border-style: solid;
-    border-width: 1;
-    border-color: shade (@theme_bg_color, 0.7);
-    border-radius: 0; /* No argb visuals by default 0, it would have been nice to have it something like 4*/
-    -GtkMenuItem-arrow-scaling: 0.4;
-}
-
-.menu * {
     padding: 2;
-}
 
-.menu *:active,
-.menu *:prelight,
-.menubar *:prelight {
-    background-image: -gtk-gradient (linear,
-				     left top,
-				     left bottom,
-				     from (shade (@theme_selected_bg_color, 1.3)),
-				     color-stop (0.05, shade (@theme_selected_bg_color, 0.95)),
-				     color-stop (0.4, @theme_selected_bg_color),
-				     to @theme_selected_bg_color);
-    /* background-color: @theme_selected_bg_color; */
-    color: @theme_selected_fg_color;
+    background-color: @theme_base_color;
+
     border-style: solid;
     border-width: 1;
     border-radius: 0;
-    border-color: darker (@theme_selected_bg_color);
+    border-color: @inactive_frame_color;
+
+    -GtkMenuItem-arrow-scaling: 0.4;
+
 }
 
-.menu.separator {
-    padding: 1 0;
+.menuitem:active,
+.menuitem:prelight {
+    background-color: @menu_bg_color;
+    color: @theme_selected_fg_color;
+    border-style: solid;
+    border-width: 1;
+    border-radius: 1;
+    border-color: darker (@menu_bg_color);
+}
+
+.menu .separator {
+    border-color: @inactive_frame_color;
+
     -GtkSeparatorMenuItem-horizontal-padding: 0;
     -GtkWidget-wide-separators: 1;
-    -GtkWidget-separator-width: 1;
-    -GtkWidget-separator-height: 7;
+    -GtkWidget-separator-height: 1;
+}
+
+/* menu radio and check items are drawn differently */
+.menu .check:active {
+    color: @menu_controls_color;
+}
+
+.menu .radio:active {
+    color: @menu_controls_color;
+}
+
+.menu .check:prelight {
+    color: @selected_fg_color;
+}
+
+.menu .radio:prelight {
+    color: @selected_fg_color;
 }
 
 /*************************
@@ -497,23 +521,6 @@ GtkScrollbar.button:insensitive {
     color: shade (@theme_selected_bg_color, 0.84);
     border-color: shade (@frame_color, 1.035);
     background-color: mix (shade (@highlighted_border, 1.345), @theme_base_color, 0.9);
-}
-
-/* menu radio and check items are drawn differently */
-.menu .check:active {
-    color: @menu_items_color;
-}
-
-.menu .radio:active {
-    color: @menu_items_color;
-}
-
-.menu .check:prelight {
-    color: @selected_fg_color;
-}
-
-.menu .radio:prelight {
-    color: @selected_fg_color;
 }
 
 GtkStatusbar {
