--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -641,16 +641,16 @@ GtkWindow > GtkVBox > GtkToolbar .button:active:prelight {
 			             to (alpha (shade (@toolbar_gradient_base, 1.14), 0.0)));    
 }
 
-GtkWindow > GtkVBox > GtkVBox > EggEditableToolbar > GtkHBox > GtkToolbar > GtkSeparatorToolItem,
-GtkWindow > GtkVBox > GtkToolbar > GtkSeparatorToolItem {
-    background-color: shade (@theme_bg_color, 0.56);
-    background-image: none;
-    -GtkWidget-wide-separators: 0;
-    padding: 0;
-}
+GtkWindow > GtkVBox > GtkVBox > EggEditableToolbar > GtkHBox > GtkToolbar .separator,
+GtkWindow > GtkVBox > GtkToolbar .separator {
+    border-style: solid;
+    border-color: shade (@theme_bg_color, 0.56);
+    border-width: 1;
 
-GtkSeparator {
-    -GtkSeparator-shadow-type: none;
+    background-image: none;
+
+    -GtkWidget-wide-separators: 1;
+    -GtkWidget-separator-width: 1;
 }
 
 GtkScrolledWindow.frame {
