notebook: theme notebook tabs like in the mockups
There's a couple of things to mention:
- GtkNotebook should be able to resize the allocation of its page header
  according to the 'tab-curvature' and 'tab-overlap' style properties,
  in order not to make the action widget (or the label) overflow under
  the next tab. When it does, we should use that feature to make
  inactive tabs smaller and more tightly stacked.
- The left and right orientations do not let the theme choose the render
  orientation of the label, and render the label horizontally, which
  conflicts with this design, so we let the GTK+ default handler render
  that, as no sane applications seem to use that; or maybe we need an
  updated design?

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -70,7 +70,8 @@
 @define-color highlighted_border #8a8f8a;
 @define-color internal_element_color #888a85;
 
-@define-color notebook_border #918e8a;
+@define-color notebook_border #a6a6a6;
+@define-color notebook_active_tab_border #1372d3;
 
 @define-color toolbar_gradient_base #aaaa9e;
 @define-color toolbar_gradient_step1 #bcbcb4;
@@ -230,26 +231,33 @@ GtkScale {
     background-color: @theme_selected_bg_color;
 }
 
-/* Notebooks/Tabs */
-
+/*****************
+ * Notebooks and *
+ * tabs          *
+ *****************/
 .notebook {
-    -adwaita-selected-tab-color: shade (@theme_selected_bg_color, 1.33);
     background-color: shade (@theme_bg_color, 1.12);
     border-color: @notebook_border;
     padding: 2;
     border-style: solid;
     border-radius: 0;
-    -GtkNotebook-tab-overlay: 10;
-    -GtkNotebook-tab-curvature: 5;
+    -GtkNotebook-tab-overlap: 6;
+    -GtkNotebook-tab-curvature: 6;
 }
 
 .notebook tab {
-    padding: 3;
-    border-radius: 2;
+    background-image: -gtk-gradient (linear,
+                                     left top, left bottom,
+                                     from (@theme_base_color),
+                                     to (@switch_slider_color));
 }
 
 .notebook tab:active {
+    -adwaita-selected-tab-color: #8dc0f3;
+    -adwaita-notebook-border-color: @notebook_border;
+    border-color: @notebook_active_tab_border;
     background-color: @theme_base_color;
+    background-image: none;
 }
 
 /**************
