--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -304,7 +304,7 @@ GtkCalendar {
 .notebook {
     background-color: shade (@theme_bg_color, 1.12);
     border-color: @notebook_border;
-    padding: 2;
+    padding: 4;
     border-style: solid;
     border-radius: 0;
     -GtkNotebook-tab-overlap: 6;
@@ -312,6 +312,7 @@ GtkCalendar {
 }
 
 .notebook tab {
+    padding: 2;
     background-image: -gtk-gradient (linear,
                                      left top, left bottom,
                                      from (@theme_base_color),
@@ -319,10 +320,19 @@ GtkCalendar {
 }
 
 .notebook tab:active {
+    padding: 0;
     -adwaita-selected-tab-color: #8dc0f3;
     -adwaita-notebook-border-color: @notebook_border;
     border-color: @notebook_active_tab_border;
     background-color: @theme_base_color;
+    background-image: none;
+}
+
+.notebook tab .button,
+.notebook tab .button:hover,
+.notebook tab .button:hover:active {
+    border-style: none;
+    background-color: alpha (@theme_bg_color, 0.0);
     background-image: none;
 }
 
