--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -659,10 +659,9 @@ GtkWindow > GtkVBox > GtkToolbar {
                                      color-stop (0.02, @toolbar_gradient_base),
 				     color-stop (0.16, @toolbar_gradient_step1),
 				     color-stop (0.90, @toolbar_gradient_step2),
-				     color-stop (0.96, @toolbar_gradient_final),
-                                     color-stop (0.97, shade (@theme_bg_color, 0.83)),
-                                     color-stop (0.98, @theme_base_color),
-				     to (@theme_base_color));
+				     color-stop (0.98, @toolbar_gradient_final),
+                                     color-stop (0.99, shade (@theme_bg_color, 0.83)),
+				     to (shade (@theme_bg_color, 0.83)));
     border-width: 0;
     border-radius: 0;
     border-style: none;
