grips: draw resize grips like like in mockups

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -190,6 +190,10 @@
     color: @theme_tooltip_fg_color;
 }
 
+.grip {
+    background-color: shade (@inactive_frame_color, 0.93);
+}
+
 /****************
  * Text Entries *
  ****************/
