tooltip: don't put a border in the tooltip
Until we can do rounded tooltips, this is the best we can do.

--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -186,6 +186,7 @@
 
 .tooltip {
     padding: 4 4;
+    border-style: none;
     background-color: @theme_tooltip_bg_color;
     color: @theme_tooltip_fg_color;
 }
