--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -887,6 +887,10 @@ row:hover {
      border-width: 0;
 }
 
+row:insensitive {
+    border-width: 0;
+}
+
 row:selected:focused {
     border-width: 0;
     background-image: -gtk-gradient (linear,
